--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -111,7 +111,7 @@ am__objects_1 = curl-tool_binmode.$(OBJEXT) curl-tool_bname.$(OBJEXT) \
 	curl-tool_urlglob.$(OBJEXT) curl-tool_util.$(OBJEXT) \
 	curl-tool_vms.$(OBJEXT) curl-tool_writeenv.$(OBJEXT) \
 	curl-tool_writeout.$(OBJEXT) curl-tool_xattr.$(OBJEXT)
-am__objects_2 = curl-strtoofft.$(OBJEXT) curl-strdup.$(OBJEXT) \
+am__objects_2 = curl-strtoofft.$(OBJEXT) \
 	curl-rawstr.$(OBJEXT) curl-nonblock.$(OBJEXT)
 am__objects_3 =
 am_curl_OBJECTS = $(am__objects_1) $(am__objects_2) $(am__objects_3)
@@ -376,7 +376,6 @@ AM_CPPFLAGS = -I$(top_builddir)/include/curl -I$(top_builddir)/include \
 # the official API, but we re-use the code here to avoid duplication.
 CURLX_ONES = \
 	../lib/strtoofft.c \
-	../lib/strdup.c \
 	../lib/rawstr.c \
 	../lib/nonblock.c
 
